[bugfix/HD-79] remove request param (categoryId)
